package com.clinica.citas.model.enums;

public enum EstadoCita {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA
}
